--- a/assets/style.css
+++ b/assets/style.css
@@ -52,6 +52,7 @@ main {
   background-color: var(--light-dark);
   box-shadow: 3px 3px var(--dark);
   transition: all 0.5s;
+  margin-top: 15px;
 }
 
 .btn:hover {
@@ -76,7 +77,7 @@ main {
   border-radius: var(--border-radius);
   box-shadow: 6px 5px var(--light-dark);
 }
-
+/* 
 .list-group {
   padding: 0;
   list-style: none;
@@ -91,7 +92,7 @@ main {
 .list-group:hover {
   background-color: var(--tertiary);
   transition: all 0.5s;
-}
+} */
 
 /* cards */
 .card {
@@ -104,7 +105,14 @@ main {
   color: var(--primary);
   background-color: var(--dark);
   padding: 2.5%;
-  border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
+}
+.five-day-header{
+border-radius: 5px;
+color: var(--primary);
+background-color: var(--dark);
+padding: 2% 2% 2% 2%;
+margin: 10px 0px 10px 0px;
+width: 80%;
 }
 
 .card-body {
@@ -121,6 +129,8 @@ main {
     display: flex;
     flex-wrap: wrap;
   }
+
+  
 
 /* form */
 .form-label,
