--- a/assets/style.css
+++ b/assets/style.css
@@ -62,6 +62,28 @@ main {
   box-shadow: 2px 2px var(--dark);
 }
 
+#search-history button{
+    font-size: 1.3rem;
+    text-decoration: none;
+    padding: 6px 5px;
+    width: 50%;
+    display: block;
+    margin: auto;
+    border-radius: var(--border-radius);
+    color: var(--primary);
+    background-color: var(--light-dark);
+    box-shadow: 3px 3px var(--dark);
+    transition: all 0.5s;
+    margin-top: 15px;
+}
+
+#search-history button:hover{
+    color: var(--primary);
+    background-color: var(--tertiary);
+    transform: translate(0, 0);
+    box-shadow: 2px 2px var(--dark);
+}
+
 .header {
   padding: 3% 4%;
   background-color: var(--dark);
@@ -77,22 +99,8 @@ main {
   border-radius: var(--border-radius);
   box-shadow: 6px 5px var(--light-dark);
 }
-/* 
-.list-group {
-  padding: 0;
-  list-style: none;
-  margin-bottom: 10px;
-  padding: 1.5%;
-  border-radius: var(--border-radius);
-  background-color: var(--light-dark);
-  color: var(--primary);
-  text-decoration: none;
-}
 
-.list-group:hover {
-  background-color: var(--tertiary);
-  transition: all 0.5s;
-} */
+
 
 /* cards */
 .card {
