--- a/assets/style.css
+++ b/assets/style.css
@@ -87,6 +87,8 @@ main {
 }
 
 .header {
+  display: flex;
+  justify-content: center;
   padding: 3% 4%;
   background-color: var(--dark);
   color: var(--primary);
@@ -100,6 +102,7 @@ main {
   display: inline-block;
   border-radius: var(--border-radius);
   box-shadow: 6px 5px var(--light-dark);
+
 }
 
 /* cards */
