--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
   --primary: hsl(200, 100%, 85%);
   --secondary: #9caea9;
   --tertiary: #000000;
-  --light-dark: hsl(200, 81%, 46%);
+  --light: hsl(200, 81%, 46%);
   --dark: #6d6968;
   --border-radius: 0.3rem;
 }
@@ -49,7 +49,7 @@ main {
   color: var(--primary);
   border: none;
   outline: none;
-  background-color: var(--light-dark);
+  background-color: var(--light);
   box-shadow: 3px 3px var(--dark);
   transition: all 0.5s;
   margin-top: 15px;
@@ -73,7 +73,7 @@ main {
   border: none;
   outline: none;
   color: var(--primary);
-  background-color: var(--light-dark);
+  background-color: var(--light);
   box-shadow: 3px 3px var(--dark);
   transition: all 0.5s;
   margin-top: 15px;
@@ -101,7 +101,7 @@ main {
   padding: 0 10px;
   display: inline-block;
   border-radius: var(--border-radius);
-  box-shadow: 6px 5px var(--light-dark);
+  box-shadow: 6px 5px var(--light);
 
 }
 
@@ -142,9 +142,9 @@ main {
 }
 
 /* form */
-.form-label,
-.form-input,
-.form-textarea {
+
+.form-input
+ {
   display: block;
 }
 
@@ -153,7 +153,7 @@ main {
   padding: 3%;
   margin: 5px 0;
   font-size: 1.2rem;
-  border: 2px solid var(--light-dark);
+  border: 2px solid var(--light);
   border-radius: var(--border-radius);
 }
 
